tests/miniJava/neg/000192_mutation.MiniJava
class java { public static public int [] java ( ) { return 0 ; } void Main ( String [ ] java ) { { } } }
